--- a/public/styles.css
+++ b/public/styles.css
@@ -64,6 +64,28 @@ h3 {
     color: #9d8854;
     transition: 0.3s      ;
 }
+.details {
+    position: relative;
+}
+.details .body {
+    line-height: 1.8rem;
+    padding-left: 0;
+   
+}
+.delete {
+   position: absolute;
+   top: 0;
+   right: 0;
+   border-radius: 5px;
+   padding: 8px;
+}
+.delete:hover {
+    cursor: pointer;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+    background-color: #cab287;
+    color: #fff;
+    transition: 0.3s;
+}
 .create-blog form {
     max-width: 400px;
     margin: 0 auto;
