--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,11 +6,26 @@
     <div class="details content">
         <h2><%= blog.title %></h2>
         <div class="content">
-            <p><%= blog.body %></p>
+            <p class="body"><%= blog.body %></p>
         </div>
         <a class="delete" data-doc="<%= blog._id %>">delete</a>
     </div>
 
     <%- include("./partials/footer.ejs") %>
+
+    <script>
+        const trashcan = document.querySelector("a.delete")
+
+        trashcan.addEventListener("click", (e) => {
+            const endpoint = `/blogs/${trashcan.dataset.doc}`;
+
+            fetch(endpoint, {
+                method: "DELETE"
+            })
+                .then((response) => response.json())
+                .then(data => window.location.href = data.redirect)
+                .catch(err = console.error(err))
+        })
+    </script>
 </body>
 </html>
